fixed layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -219,8 +219,7 @@ footer {
 .img-class {
   height: 50px;
   width: 50px;
-  transform: scale(1);
-	transition:transform 0.6s ease;
+
 }
 
 .portfolio-div {
@@ -244,7 +243,6 @@ footer {
 /* card body */
 .card-body {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
 }
@@ -258,8 +256,16 @@ footer {
   flex: 10 15;
 }
 
+.rounded {
+  transform: scale(1);
+	transition:transform 0.6s ease;
+}
 
-.img-class:hover {
+.bg-dark-text-white {
+	overflow: hidden;
+}
+
+.rounded:hover {
   transform:scale(1.1);
 }
 
